{
  "version": 4,
  "terraform_version": "1.2.4",
  "serial": 731,
  "lineage": "c2677e45-226d-9b03-cfa6-b313c7dd9b3a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "web_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:610412943837:loadbalancer/webapp-load-balancer",
            "availability_zones": [
              "us-east-2a",
              "us-east-2b",
              "us-east-2c"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "desync_mitigation_mode": "defensive",
            "dns_name": "webapp-load-balancer-594902186.us-east-2.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "HTTP:80/",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "webapp-load-balancer",
            "idle_timeout": 60,
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "webapp-load-balancer",
            "security_groups": [
              "sg-006c88a76a0aaf3f7"
            ],
            "source_security_group": "610412943837/elb-webtraffic-sg",
            "source_security_group_id": "sg-006c88a76a0aaf3f7",
            "subnets": [
              "subnet-0099ac7b25449eb6c",
              "subnet-07363045c9b22619c",
              "subnet-08deeb6706e1e70ee"
            ],
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "aws_security_group.elb_webtrafic_sg",
            "aws_subnet.public_us_east_2a",
            "aws_subnet.public_us_east_2b",
            "aws_subnet.public_us_east_2c",
            "aws_vpc.main_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:610412943837:internet-gateway/igw-06b5f6443e0768b99",
            "id": "igw-06b5f6443e0768b99",
            "owner_id": "610412943837",
            "tags": {
              "Name": "internet-gw"
            },
            "tags_all": {
              "Name": "internet-gw"
            },
            "vpc_id": "vpc-0d7b9f0d772a2da37"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:610412943837:route-table/rtb-0d60291084787015d",
            "id": "rtb-0d60291084787015d",
            "owner_id": "610412943837",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06b5f6443e0768b99",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "production-route-table"
            },
            "tags_all": {
              "Name": "production-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d7b9f0d772a2da37"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06c7cdbe9988f8cd5",
            "route_table_id": "rtb-0d60291084787015d",
            "subnet_id": "subnet-08deeb6706e1e70ee"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.route_table",
            "aws_subnet.public_us_east_2a",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d69cffd25e041152",
            "route_table_id": "rtb-0d60291084787015d",
            "subnet_id": "subnet-07363045c9b22619c"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.route_table",
            "aws_subnet.public_us_east_2b",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0daf5874324830eba",
            "route_table_id": "rtb-0d60291084787015d",
            "subnet_id": "subnet-0099ac7b25449eb6c"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.route_table",
            "aws_subnet.public_us_east_2c",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elb_webtrafic_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:610412943837:security-group/sg-006c88a76a0aaf3f7",
            "description": "Allow inbound web trafic to load balancer",
            "egress": [],
            "id": "sg-006c88a76a0aaf3f7",
            "ingress": [],
            "name": "elb-webtraffic-sg",
            "name_prefix": "",
            "owner_id": "610412943837",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "elb-webtraffic-sg"
            },
            "tags_all": {
              "Name": "elb-webtraffic-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d7b9f0d772a2da37"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:610412943837:security-group/sg-09f3271d4e850f503",
            "description": "Allow traffic from load balancer to instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "all traffic out",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09f3271d4e850f503",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh traffic from anywhere",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "web traffic from load balancer",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-006c88a76a0aaf3f7"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "web traffic from load balancer",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-006c88a76a0aaf3f7"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "instance-sg",
            "name_prefix": "",
            "owner_id": "610412943837",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "instance-sg"
            },
            "tags_all": {
              "Name": "instance-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d7b9f0d772a2da37"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.elb_webtrafic_sg",
            "aws_vpc.main_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "HTTPS_from_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 443,
            "id": "sgrule-319189335",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-006c88a76a0aaf3f7",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.elb_webtrafic_sg",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "HTTP_from_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-3545295447",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-006c88a76a0aaf3f7",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.elb_webtrafic_sg",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "all_traffic_out",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-4206313833",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-006c88a76a0aaf3f7",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.elb_webtrafic_sg",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_SSH",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-1708832738",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-006c88a76a0aaf3f7",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.elb_webtrafic_sg",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "elb_egress_to_webservers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 80,
            "id": "sgrule-645025007",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-006c88a76a0aaf3f7",
            "self": false,
            "source_security_group_id": "sg-09f3271d4e850f503",
            "to_port": 80,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.elb_webtrafic_sg",
            "aws_security_group.instance_sg",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "elb_tls_egress_to_webservers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 443,
            "id": "sgrule-1691828282",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-006c88a76a0aaf3f7",
            "self": false,
            "source_security_group_id": "sg-09f3271d4e850f503",
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.elb_webtrafic_sg",
            "aws_security_group.instance_sg",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_us_east_2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:610412943837:subnet/subnet-08deeb6706e1e70ee",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08deeb6706e1e70ee",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "610412943837",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public-Subnet us-east-2a"
            },
            "tags_all": {
              "Name": "Public-Subnet us-east-2a"
            },
            "vpc_id": "vpc-0d7b9f0d772a2da37"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_us_east_2b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:610412943837:subnet/subnet-07363045c9b22619c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07363045c9b22619c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "610412943837",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public-Subnet us-east-2b"
            },
            "tags_all": {
              "Name": "Public-Subnet us-east-2b"
            },
            "vpc_id": "vpc-0d7b9f0d772a2da37"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_us_east_2c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:610412943837:subnet/subnet-0099ac7b25449eb6c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0099ac7b25449eb6c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "610412943837",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public-Subnet us-east-2c"
            },
            "tags_all": {
              "Name": "Public-Subnet us-east-2c"
            },
            "vpc_id": "vpc-0d7b9f0d772a2da37"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:610412943837:vpc/vpc-0d7b9f0d772a2da37",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-023ebe0f4a99369bd",
            "default_route_table_id": "rtb-097fecb79e68c6234",
            "default_security_group_id": "sg-05ba57f536a0020a5",
            "dhcp_options_id": "dopt-09a50a472823d7e66",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0d7b9f0d772a2da37",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-097fecb79e68c6234",
            "owner_id": "610412943837",
            "tags": {
              "Name": "production-vpc"
            },
            "tags_all": {
              "Name": "production-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}